# llm-chatbot

./: .gitignore  pyproject.toml
src/: main.py  train.py
src/fine_tuning/: processor.py
src/inference/: processor.py  prompts.py
src/rag/: processor.py
src/web_ui/: streamlit.py
